# st2rs

./: .gitignore  AccountableWarrantExecution.ab  Cargo.toml  CompiledAWEFresh.rs  CompiledAWEWithQueries.pv  DiffieHellman.ab  Makefile  README.md
data/NeedhamSchroeder/: CompiledNS.pv  CompiledNSLwithID.pv  CompiledNSLwithID.rs
examples/AccountableWarrantExecution/: AWE.pv  AWE.rs  AWE.sst
examples/DigitalEnvelopeWithTPM/: TPM.rs  TPM.sst
examples/NeedhamSchroeder/: NS.sst  NSwithID.pv  NSwithID.sst
examples/NeedhamSchroederLowe/: NSL.pv  NSL.sst  NSLwithID.rs  NSLwithID.sst
input/: ATM.sst  AccountWarrantExecution.sst  NeedhamSchroeder.sst  NeedhamSchroederLowe.sst  TPM.sst
output/: CompiledAWEFinal.pv  CompiledAWEFinal.rs  CompiledAWEFixed.rs  CompiledAWEFresh.rs  CompiledAWEWithAutomaticQueries.pv  CompiledAWEWithQueries.pv  CompiledNS.pv  CompiledNS.rs  CompiledNSL.pv  CompiledTPM.pv  CompiledTPM.rs
src/: lexer.mll  localtypes.ml  main.ml  parser.mly  proverif.ml  rustprinter.ml  rusttranslator.ml  rusttypes.ml  rusttypes2.ml  typecheck.ml  typecheck2.ml  types.ml
