[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
session_types = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.4"
rsa = { version = "0.5.0", features = ["serde", "pem"] }
uid = "0.1.7"
openssl = "0.10.38"